--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,4 +24,7 @@
   <button ion-button full (click)="login()">Login</button>
 
   <button ion-button full (click)="signup()" color="secondary">Sign Up</button>
+
+
+  <button ion-button full (click)="reset()" color="danger">Reset Email</button>
 </ion-content>
